--- a/main.tex
+++ b/main.tex
@@ -3,29 +3,14 @@
 \usepackage{main}
 
 \usepackage{titlesec}
-%\titleformat{\chapter}[hang] 
-%{\normalfont\huge\bfseries}{\chaptertitlename\ \thechapter}{1em}{}
-%\renewcommand{\chaptername}{} % eliminate Chapter in divisional heading
+
 
 
 \usepackage{chngcntr}
 \counterwithout{equation}{chapter} %licznik numeru rownan
-%\counterwithout{Equation}{chapter} %licznik numeru rownan
 \counterwithin*{equation}{chapter}
 \counterwithout{figure}{chapter}   %licznik numeru zdjec
 
-
-%  begin     mybox
-%\usepackage[framemethod=default]{mdframed}
-%\newmdenv[innerlinewidth=0.5pt, roundcorner=4pt,linecolor=black,innerleftmargin=6pt,innerrightmargin=6pt,innertopmargin=6pt,innerbottommargin=6pt]{mybox}
-
-%\usepackage[many]{tcolorbox}    
-	
-%\newtcolorbox{mybox}{
-   % boxrule = 0.9pt,
-  %  rounded corners,
-  %  arc = 10pt   % zaokraglenie
-%}
 
 
 \UseRawInputEncoding
@@ -46,37 +31,30 @@
 \begin{document}
     \tableofcontents
     \addcontentsline{toc}{section}{Contents}
-	%\listoffigures  % problem w chapter 7
 	   
     \clearpage
     
     
  \part{Introduction to MATLAB and Numerical Preliminaries}
-  %osoba 1
-    \subfile{ch1/ch1}%ok 
-    \subfile{ch2/ch2}%ok
-    \subfile{ch3/ch3}%ok
-    \subfile{ch4/ch4}%ok
-    \subfile{ch5/ch5}%ok
-    
-  %osoba 2
-	\subfile{ch6/ch6} %ok
- 
-  %osoba 4
-	\subfile{ch7/ch7} %ok 
+    \subfile{ch1/ch1}
+    \subfile{ch2/ch2}
+    \subfile{ch3/ch3}
+    \subfile{ch4/ch4}
+    \subfile{ch5/ch5}
+	\subfile{ch6/ch6} 
+	\subfile{ch7/ch7} 
+	
 \part{Ordinary Differential Equations}
-	\subfile{ch8/ch8} %ok
-	\subfile{ch9/ch9} %ok
-	\subfile{ch10/ch10} %ok
+	\subfile{ch8/ch8} 
+	\subfile{ch9/ch9} 
+	\subfile{ch10/ch10} 
+	
 \part{Partial Differential Equations}
-  %osoba 5
-	\subfile{ch11/ch11} %ok
-  %osoba6
-  	\subfile{ch12/ch12} %ok
-  %osoba 7 , 8
-	\subfile{ch13/ch13}%-
-	\subfile{ch14/ch14}%-
-	%\subfile{ch15/ch15}%-
+	\subfile{ch11/ch11}
+  	\subfile{ch12/ch12}
+	\subfile{ch13/ch13}
+	\subfile{ch14/ch14}
+	\subfile{ch15/ch15}
 
 
 \end{document}
