--- a/ch6/ch6.tex
+++ b/ch6/ch6.tex
@@ -1376,7 +1376,11 @@ proportionality constant is approximately $\hat{A}$:
 \end{equation}
 The word "essentially" here means that we can get the ratios $e_{n+1} / e_n^{\alpha}$ as close to
 $\hat{A}$ as desired. In the notation of mathematical analysis, we can paraphrase the
-definition of $\hat{A}$ by the formula: $$\hat{A} \equiv lim sup_{n \rightarrow \infty} e_{n+1} / e_n^{\alpha}$$
+definition of $\hat{A}$ by the formula: 
+$$
+\hat{A} \equiv \textnormal{lim sup}_{n \rightarrow \infty} e_{n+1} / e_n^{\alpha}
+$$
+
 provided that this $limsup$ is positive. In the remaining case that this greatest lower
 bound of the numbers $A$ is zero, the asymptotic error constant is undefined
 (making $\hat{A} = 0$ may seem reasonable but it is not a good idea since it would make
